[package]
name = "block-users"
version = "0.0.3"
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
twitch_types = { git = "https://github.com/twitch-rs/twitch_api" }
twitch_api = { git = "https://github.com/twitch-rs/twitch_api", features = [
    "reqwest",
    "helix",
    "trace_unknown_fields",
] }
reqwest = { version = "0.11.3", features = ["json"] }
dotenv = "0.15.0"
anyhow = "1.0.40"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing = "0.1.25"
clap = { version = "3", features = ["derive", "env"] }
url = "2.2.2"
serde_json = "1.0.64"
tokio = { version = "1.5.0", features = ["full"] }
futures = "0.3.16"
openssl-sys = "0.9.66"
reqwest-retry = "0.1.0"
reqwest-middleware = "0.1.0"
http = "0.2.4"

[features]
vendored = ["openssl-sys/vendored"]

[patch.crates-io.twitch_types]
git = "https://github.com/twitch-rs/twitch_api"
